Fix overflow for creating account on windows

--- a/obscura-ui/src/views/LoginView.module.css
+++ b/obscura-ui/src/views/LoginView.module.css
@@ -59,6 +59,6 @@
     min-height: 29vh;
     max-height: 51vh;
     @media (orientation: landscape) {
-        min-height: 54vh;
+        min-height: 41vh;
     }
 }
